namespace/seafile/seafile/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile-https
  namespace: seafile
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seafile.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: seafile
          port: 80
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile-http
  namespace: seafile
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`seafile.oglesby.io`)
      kind: Rule
      services:
        - name: seafile
          port: 80
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
